--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.3.6",
     "sass": "^1.32.12",
     "vanilla-masker": "^1.2.0"
   },
