--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.3.6",
+    "react-spinners": "^0.11.0",
     "sass": "^1.32.12",
     "swr": "^0.5.6",
     "vanilla-masker": "^1.2.0",
